# WindowsFonts

./: README.md  pyproject.toml
.github/workflows/: run_test.yml
tests/: test_lfPitchAndFamily.py
windows_fonts/: __init__.py  directwrite.py  gdi.py  user32.py  windows_fonts.py
