[project]
name = "WindowsFonts"
description = "Query font filename on Windows."
authors = [
    { name = "moi15moi", email = "moi15moismokerlolilol@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "comtypes",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/moi15moi/WindowsFonts/"
Tracker = "https://github.com/moi15moi/WindowsFonts/issues/"

[build-system]
platforms = ["win32"]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "windows_fonts.__init__.__version__" }

[tool.setuptools.packages.find]
include = ["windows_fonts*"]